B-F Backup Sandbox 30.4.12/src/objects/Outlet_Visit_Item__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Infowelders</description>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BackBarVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BackBarVisit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bottle_Price_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bottle Price Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bottle_Price__c</fullName>
        <label>Bottle Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Custom_Product__r.Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>TEXT(Outlet_Visit__r.Venue__r.Channel__c)</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CocktailCount__c</fullName>
        <label>CocktailCount</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created for Product Remediation process</description>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Outlet Visit Items</relationshipLabel>
        <relationshipName>Outlet_Visit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Double_Price_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Price Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Double_Price__c</fullName>
        <label>Double Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drink_Price_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drink Price Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drink_Price__c</fullName>
        <label>Drink Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facing__c</fullName>
        <description>Infowelders</description>
        <label>Facing</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <label>Legacy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Off__c</fullName>
        <description>this field stores the information for On Trade where an Product is placed or located in the store/account/outlet  - via pick list value</description>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Free Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet Cage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiller Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf &amp; Chiller Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>checkout/information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf &amp; Cooler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-in Cooler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf &amp; Walk-in Cooler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf &amp; Checkout Shelf</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_On__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>BackBar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pouring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Reporting__c</fullName>
        <description>The picklist selection from location_on and location_off will get copied here.</description>
        <formula>IF(ISBLANK(TEXT(Location_On__c)), TEXT(Location_Off__c),TEXT(Location_On__c))</formula>
        <label>Location Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlet_Visit_Item_Key__c</fullName>
        <label>Outlet Visit Item Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlet_Visit__c</fullName>
        <label>Outlet Visit</label>
        <referenceTo>Outlet_Visit__c</referenceTo>
        <relationshipLabel>Outlet Visit Items</relationshipLabel>
        <relationshipName>Outlet_Visit_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <description>Placement Exists</description>
        <formula>IF( Bottle_Price__c  &gt; 1 ||  Drink_Price__c &gt; 1 ||  Double_Price__c &gt; 1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Placement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceTypeFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PriceTypeFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Outlet Visit Items</relationshipLabel>
        <relationshipName>Outlet_Visit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shelf_Category_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shelf Category Item</label>
        <referenceTo>Shelf_Category_Items__c</referenceTo>
        <relationshipLabel>Outlet Visit Items</relationshipLabel>
        <relationshipName>Outlet_Visit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shelf__c</fullName>
        <description>Infowelders</description>
        <label>Shelf</label>
        <picklist>
            <picklistValues>
                <fullName>1. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. europalette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Shelf from Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Shelf from Bottom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Space_Placement__c</fullName>
        <description>Infowelders</description>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Free Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet Cage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiller Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf &amp; Chiler Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>checkout/information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf &amp; Cooler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-in Cooler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Outlet Visit Item</label>
    <nameField>
        <label>Outlet Visit Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outlet Visit Items</pluralLabel>
    <recordTypes>
        <fullName>APAC</fullName>
        <active>true</active>
        <label>APAC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Canada</fullName>
        <active>true</active>
        <label>Canada</label>
    </recordTypes>
    <recordTypes>
        <fullName>Germany</fullName>
        <active>true</active>
        <label>Germany</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>